Sun Jul 31 16:34:15 BST 2005  Colin Watson  <cjwatson@debian.org>

	* docs/COPYING, docs/COPYING.LIB: Update from www.gnu.org to pick up
	  the FSF's new address.
	* Update all other GPL and LGPL notices with the new address (apart
	  from those in externally-maintained files).

Wed Jul 27 11:29:02 BST 2005  Colin Watson  <cjwatson@debian.org>

	* src/man.c (gripe_no_man): Don't emit a different message in the
	  troff case; it's extra translation load and nobody really cares
	  about the distinction. Avoid splitting up a sentence into two
	  translatable pieces (Debian bug #320111).
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
	  po/fr.po, po/it.po, po/ja.po, po/pl.po, po/pt_BR.po, po/ro.po,
	  po/ru.po, po/sv.po: Update with msgmerge.

Tue Jul 26 00:05:02 BST 2005  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): Use 'col -b -p -x' rather than just
	  'col -b' when stdout is not a terminal.

Tue Jul 12 02:08:41 BST 2005  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in (ATTRIBUTE_MALLOC): Define to a function
	  attribute enabling malloc return value checking if using GCC 2.96
	  or newer.
	  (xmalloc, xrealloc, xstrdup, xstrndup): Use it.

Tue Jul 12 01:59:10 BST 2005  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in (GNUC_PREREQ): Helper macro borrowed from
	  glibc.
	  (ATTRIBUTE_FORMAT_PRINTF): Define to a function attribute enabling
	  printf-style format string checking if using GCC 2.0 or newer.
	  (ATTRIBUTE_SENTINEL): Use GNUC_PREREQ. Use __sentinel__ rather
	  than sentinel to avoid possible clashes with other macros.
	* lib/error.h (error): Add printf format attribute.
	* lib/xmalloc.c: Include "error.h" rather than redeclaring error.

Mon Jul 11 18:12:58 BST 2005  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Emit a debugging message.

Mon Jul 11 14:41:52 BST 2005  Colin Watson  <cjwatson@debian.org>
